vm arguments