@@ -1,3 +1,7 @@
 # SpringBoot 2.x
 算法、加解密、JDK Collections包学习、Concurrent包学习、Spring注解研究等基础框架研究
 
+### VM Arguments
+-verbose -XX:+TraceClassLoading -XX:+PrintGCDetails
+
+JAVA_OPT="-Xms1G -Xmx2G -XX:MetaspaceSize=256m"
